--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_API_URL=https://backendhost-46e2.vercel.app
+# VITE_API_URL=http://localhost:4000
 
 # CONN = 'mongodb://localhost:27017/backenddb'
 
